--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+    <link rel="stylesheet" href="css/cookieConsent.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -488,6 +490,14 @@
         <img src="icons/chevron-circle-up-solid.svg" alt="up">
     </a>
 
+    <div class="popup">
+        <div class="container">
+            Я соглашаюсь, что мои cookie будут использованы
+            <button class="btn_cookie" data-cancel>Cancel</button>
+            <button class="btn_cookie" data-confirm>Accept</button>
+        </div>
+    </div>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
@@ -495,5 +505,6 @@
     <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/cookieConsent.js"></script>
 </body>
 </html>
